--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,11 +343,13 @@ a:hover {
   }
 }
 
+/* green: 33cb33 blue: 7F7FE5*/
+
 .page-header {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957);
+  background-image: linear-gradient(120deg, #cb3333, #7f7fe5);
 }
 @media screen and (min-width: 64em) {
   .page-header {
@@ -371,7 +373,7 @@ a:hover {
 }
 @media screen and (min-width: 64em) {
   .project-name {
-    font-size: 3.25rem;
+    font-size: 2.25rem;
   }
 }
 @media screen and (min-width: 42em) and (max-width: 64em) {
@@ -392,16 +394,37 @@ a:hover {
 }
 @media screen and (min-width: 64em) {
   .project-tagline {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
 }
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-tagline {
-    font-size: 1.15rem;
+    font-size: 1.25rem;
   }
 }
 @media screen and (max-width: 42em) {
   .project-tagline {
+    font-size: 1.1rem;
+  }
+}
+
+.project-authors {
+  margin-bottom: 2rem;
+  font-weight: normal;
+  opacity: 0.7;
+}
+@media screen and (min-width: 64em) {
+  .project-authors {
+    font-size: 1.25rem;
+  }
+}
+@media screen and (min-width: 42em) and (max-width: 64em) {
+  .project-authors {
+    font-size: 1.15rem;
+  }
+}
+@media screen and (max-width: 42em) {
+  .project-authors {
     font-size: 1rem;
   }
 }
@@ -444,7 +467,7 @@ a:hover {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957;
+  color: #9a9a9a;
 }
 .main-content p {
   margin-bottom: 1em;
