--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,13 @@
         {{ page.description | default: site.description | default: site.github.project_tagline }}
       </h2>
       <h2 class="project-authors">
-        {{page.custom.header.authors}}
+        <a class="author" href="https://www.linkedin.com/in/alexandermattturner">Alex Turner*</a>, <a class="author" href="https://neale.github.io/">Neale Ratzlaff*</a>, <a class="author" href="http://web.engr.oregonstate.edu/~tadepall/">Prasad Tadepalli</a>
       </h2>
       {% if page.custom.header.github.is_project_page %}
         <a href="{{page.custom.header.github.repository_url}}" class="btn">View on GitHub</a>
       {% endif %}
       {% if page.custom.header.publications.show_paper %}
-        <a href="{{ page.custom.header.publications.paper_url }}" class="btn">NeurIPS Paper</a>
+        <a href="{{ page.custom.header.publications.paper_url }}" class="btn">Read the Paper</a>
       {% endif %}
     </header>
 
