Changed gifs into mp4s, changed byline, changed subtitle.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         {{ page.description | default: site.description | default: site.github.project_tagline }}
       </h2>
       <h2 class="project-authors">
-        <a class="author" href="https://www.linkedin.com/in/alexandermattturner">Alex Turner*</a>, <a class="author" href="https://neale.github.io/">Neale Ratzlaff*</a>, <a class="author" href="http://web.engr.oregonstate.edu/~tadepall/">Prasad Tadepalli</a>
+        <a class="author" href="https://www.linkedin.com/in/alexandermattturner">Alex Turner</a> & <a class="author" href="https://neale.github.io/">Neale Ratzlaff</a>, <a class="author" href="http://web.engr.oregonstate.edu/~tadepall/">Prasad Tadepalli</a>
       </h2>
       {% if page.custom.header.github.is_project_page %}
         <a href="{{page.custom.header.github.repository_url}}" class="btn">View on GitHub</a>
