--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <meta property="og:title" content="Avoiding Side Effects">
+    <meta property="og:description" content="Making agents behave with an unsupervised penalty term.">
+    <meta property="og:image" content="assets/img/socialMediaPreview.png">
+    <meta property="og:url" content="https://chasedenecke.github.io">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
