--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <meta property="og:title" content="Avoiding Side Effects">
     <meta property="og:description" content="Making agents behave with an unsupervised penalty term.">
-    <meta property="og:image" content="assets/img/socialMediaPreview.png">
+    <meta property="og:image" content="https://chasedenecke.github.io/assets/img/socialMediaPreview.png">
     <meta property="og:url" content="https://chasedenecke.github.io">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
