Added twitter social tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,11 @@
     <meta property="og:description" content="Making agents behave with an unsupervised penalty term.">
     <meta property="og:image" content="https://chasedenecke.github.io/assets/img/socialMediaPreview.png">
     <meta property="og:url" content="https://chasedenecke.github.io">
+
+    <meta name="twitter:title" content="Avoiding Side Effects">
+    <meta name="twitter:description" content="Making agents behave with an unsupervised penalty term.">
+    <meta name="twitter:image" content="https://chasedenecke.github.io/assets/img/socialMediaPreview.png">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
